fix overflow of text in navigation column (#2174)

--- a/style/base/navs.scss
+++ b/style/base/navs.scss
@@ -9,6 +9,7 @@
     & > .nav-col {
         flex-shrink: 0;
         max-width: 180px;
+        hyphens: auto;
         & > label {
             background-color: #f5f5f5;
             border-radius: 6px;
